# lognament-python

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci-test.yml
docs/source/: conf.py  index.rst
lognament/decorators/: lognament.py
lognament/managers/: base_manager.py  message_manager.py
lognament/messages/base/: __init__.py  base.py
lognament/messages/errors/: function_error.py
lognament/messages/footers/: __init__.py  function_end.py
lognament/messages/headers/: __init__.py  function_name.py  function_start.py
lognament/messages/info/: __init__.py  function_name.py
lognament/utils/: errors.py
tests/: conftest.py  test_decorators.py  test_messages.py
tests/test_messages/: test_base.py  test_info.py
