[tool.poetry]
name = "lognament"
version = "0.1.0"
description = ""
authors = ["lbhtran <lbhtran@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
commitizen = "^2.37.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.1.1"
sphinx-autoapi = "^2.0.0"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "$version"

[tool.isort]
known_third_party =["pytest"]

[tool.pytest.ini_options]
minversion = "7.2.0"
addopts = "-s -vv --cov=lognament"
testpaths = ["tests"]
log_cli = true
log_cli_level = "DEBUG"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
